--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <!-- <script
+    type="text/javascript"
+    async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=MML_SVG" 
+  ></script>  -->
+  <!-- <script
+  type="text/javascript"
+  async
+  src="%PUBLIC_URL%/assets/js/MathJax.js?config=MML_SVG"
+></script> -->
     <title>React App</title>
   </head>
   <body>
