--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   async
   src="%PUBLIC_URL%/assets/js/MathJax.js?config=MML_SVG"
 ></script> -->
-    <title>React App</title>
+    <title>AloronBD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
