--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 ></script> -->
     <title>AloronBD</title>
   </head>
-  <body>
+  <body class="bg-gray-200">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
